--- a/css/d003-style.css
+++ b/css/d003-style.css
@@ -67,11 +67,13 @@ li a:hover {
 
 main {
     max-width: 700px;
+    min-width: 380px;    
     background-color: white;
-    margin: 0px auto 30px auto;
-    padding: 20px;
+    margin: 0px auto 55px auto;
+    padding: 20px 15px 90px ;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(0, 0, 0, 0.295);
 }
 
 .image-d003 {
