--- a/css/d008-style.css
+++ b/css/d008-style.css
@@ -65,11 +65,15 @@ body{
     margin: 0;
     color: rgb(68, 68, 68);
 }
-main{
+main{    
     max-width: 700px;
+    min-width: 380px;
     background-color: rgba(235, 232, 232, 0.897);
     margin: 0px auto 45px auto;
-    padding: 20px;
+    padding: 20px 15px 75px ;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(0, 0, 0, 0.295);
 }
 
 .image-d008{
