--- a/css/d004-style.css
+++ b/css/d004-style.css
@@ -66,6 +66,7 @@ nav li a:hover {
 
 main {
     max-width: 700px;
+    min-width: 360px;
     background-color: white;
     margin: 0px auto 30px auto;
     padding: 20px;
